src/tests/snapshots/1.md.snap
---
source: src/tests.rs
expression: run_test(&input)
---
TestOutput {
    llm_output: ParsedLlmOutput {
        instructions: [
            Instruction {
                text: "Add the `Encode` and `Decode` derive attributes to the `FsState`, `FilePath`, and `FileMetadata` structs:Foo::bar foo_bar FooBar",
            },
        ],
        code_changes: [
            CodeChange {
                language: "rust",
                code: "#[derive(Encode, Decode)]\npub struct FsState {\n    files: BTreeMap<FilePath, FileMetadata>,\n}\n\n#[derive(Encode, Decode)]\npub struct FilePath(Arc<str>);\n\n#[derive(Encode, Decode)]\npub struct FileMetadata {\n    #[bincode(with_serde)]\n    content_hash: ContentHash,\n}\n",
            },
        ],
    },
    instruction_symbols: [
        #FileMetadata,
        #FilePath,
        #FooBar,
        #FsState,
        #foo_bar,
        #Foo::bar,
    ],
    code_symbols: [
        #FileMetadata,
        #FilePath,
        #FsState,
    ],
}
